[package]
name = "turnhammer"
description = "A tool to stress-test TURN (RFC 5766) servers"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"
keywords = [ "rfc5766", "turn", "networking"]

[dependencies]
futures = "0.1.25"
tokio = "0.1.15"
structopt = "0.2.14"
stun_codec = "0.1.10"
bytecodec = "0.4.11"
rand = "0.6.5"
stunclient = "0.1.1"
turnclient = "0.1.0"
spin_sleep = "0.3.7"
tokio-timer = "0.2.10"

[replace]
"stun_codec:0.1.10" = {path = "/mnt/src/git/stun_codec"}
