[package]
name = "turnhammer"
description = "A tool to stress-test TURN (RFC 5766) servers"
version = "0.2.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"
keywords = [ "rfc5766", "turn", "networking"]
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/turnhammer"
readme = "README.md"
categories = ["network-programming"]


[dependencies]
futures = {version="0.3"}
tokio = {version="1",features=["rt","net","sync","time", "macros"]}
tokio-stream = {version="0.1",features=["time"]}
stun_codec = "0.1.10"
bytecodec = "0.4.11"
rand = "0.8"
stunclient = "0.3"
turnclient = "0.4"
spin_sleep = "1"
byteorder = "1.3.1"
anyhow="1"
unzip-n = "0.1.2"
argh = "0.1.5"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
incremental = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
